# individualassignment1

./: CONTRIBUTING.rst  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: individualassignment1.rst  modules.rst
tests/: test_individualassignment1.py
