[tool.poetry]
name = "\"individualassignment1\""
version = "0.1.0"
description = "\"Package that will further my learning and help my grade\""
authors = ["Aidan Mattrick <aidan.mattrick@gmail.com>"]
license = "\"MIT\""

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
